<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".GameLogic">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/restart"
        android:foreground="@drawable/restart"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/restart" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif-monospace"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/timerpic"
        app:layout_constraintStart_toStartOf="@+id/timerpic"
        app:layout_constraintTop_toBottomOf="@+id/timerpic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="97dp" />

    <LinearLayout
        android:id="@+id/board"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="19dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0">

    </LinearLayout>

    <ImageView
        android:id="@+id/timerpic"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/timer"
        app:layout_constraintEnd_toStartOf="@+id/choice"
        app:layout_constraintStart_toEndOf="@+id/leftmines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/timer" />

    <TextView
        android:id="@+id/leftmines"
        android:layout_width="105dp"
        android:layout_height="33dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif-monospace"
        android:text="@string/mines_left"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/choice"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:contentDescription="@string/choice_to_flag_or_to_reveal"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timerpic"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bomb_005" />

    <TextView
        android:id="@+id/minesLeftinfo"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftmines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>